# Aletheia

./: .gitignore  Apptainer.aletheia  CMakeLists.txt  README.md  aletheia.sh  build_test.sh  run_benchmarks.sh  serialize.py
.github/workflows/: release.yml
benchmarks/backdoor/: backdoor-domain.epddl  backdoor-problem.epddl  backdoor-problem.json
benchmarks/cn5/: cn5.json
benchmarks/coin1/: problem_1.json
benchmarks/coin2/: problem_2.json
benchmarks/coin3/: problem_3.json
benchmarks/coin4/: problem_4.json
benchmarks/coin5/: problem_5.json
benchmarks/grapevine1/: plan.json  problem_1.json
benchmarks/muddy1/: muddy-children-problem.epddl  muddy-children-problem.json
benchmarks/muddy3/: muddy-children-domain.epddl  muddy-children-problem-3.epddl  muddy-children-problem-3.json
benchmarks/sally-anne/: plan.json  problem_1.json  sally-anne.epddl
benchmarks/sally-anne/instances/: problem_1.epddl
benchmarks/whisper/: whisper-domain.epddl  whisper-problem.epddl  whisper-problem.json
include/: action.hpp  bisimulation.hpp  formula.hpp  heuristic.hpp  parser.hpp  product_update.hpp  search.hpp  state.hpp  task.hpp  types.hpp  validator.hpp  world_cap_policy.hpp
results/: benchmark_results.csv
results/box-task/: plan.json
results/coin3/: plan.json
results/ed/backdoor/: plan.json
results/ed/coin4/: plan.json
results/ks/gossip1/: plan.json
results/muddy3/: plan.json
results/sally-anne/: plan.json
src/: action.cpp  bisimulation.cpp  formula.cpp  heuristic.cpp  main.cpp  parser.cpp  product_update.cpp  search.cpp  state.cpp  validator.cpp
(+6 files in other folders)
